--- a/product.html
+++ b/product.html
@@ -9,7 +9,22 @@
   </head>
   <body>
     <a href="index.html" class="btn home-link">back home</a>
-    <section class="product"></section>
+    <section class="product">
+      <div class="product-wrapper">
+        <img src="./couch.jpg" class="img" alt="">
+        <div class="product-info">
+          <h3>title</h3>
+          <h5>company</h5>
+          <div class="colors">
+            <span class="product-color"></span>
+              <span class="product-color" style="background: red;"></span>
+            
+          </div>
+          <p>skdjfoiaeksdjflnirgndlgvnesldrgnvc</p>
+          <button class="btn">add to cart</button>
+        </div>
+      </div>
+    </section>
     <script src="./product.js"></script>
   </body>
 </html>
